--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "php-add-lib"]
 	path = php-add-lib
 	url = https://github.com/Theosakamg/php-add-lib.git
+[submodule "php-common-lib"]
+	path = php-common-lib
+	url = https://github.com/Theosakamg/php-common-lib.git
